src/Stylesheets/_Personal.scss
.personalList {
    margin-top: auto;
    background-color: white;
    height: 100vh;
    scroll-snap-align: start;
    color: black;
    display: flex;
    flex-direction: column;

    .personalTitle {
        font-family: 'Gilroy-ExtraBold';
    }

    .cards {
        width: 100%;
        float: none;
        height: 90%;
        padding-left: 25px;
        margin: 0 0.25%;
        display: flex;
        zoom: 1;
        overflow-y: hidden;

        .personalDiv {
            img {
                height: 250px;
                width: 300px;
                border-radius: 5px;
                box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25), 0 8px 16px -8px rgba(0, 0, 0, 0.3);
            }

            #container {
                background: white;
                overflow: hidden;
                display: flex;
                margin-right: 20px;
                flex-direction: column-reverse;

                .personalDetails {
                    position: relative;
                    text-align: left;
                    overflow: hidden;
                    padding: 20px;
                    width: 100%;
                    height: 330px;

                    .instagramUrl {
                        display: flex;
                        text-decoration: none;
                        color: #0066FF;
                        font-size: 20px;
                        font-family: 'Inter-Bold';
                    }

                    .bigTitle {
                        font-family: 'Inter-Bold';
                    }
                }

                .personalImage {
                    position: relative;
                    overflow: hidden;
                    width: 100%;
                    height: 400px;
                }
            }
        }
    }
}

// mobile device
@media (max-width: 768px) {
    .personalList {
        .personalTitle {
            font-size: 36px;
            padding: 20px 20px 20px 30px;

            span {
                margin-left: 6px;
            }
        }

        .cards {
            width: 100%;
            height: 490px;
            float: none;
            margin: 0 0.25%;
            display: flex;
            zoom: 1;
            overflow-y: hidden;

            .personalDiv {
                #container {
                    background: white;
                    border-radius: 5px;
                    overflow: hidden;
                    height: 250px;
                    width: 300px;
                    display: flex;
                    margin-right: 30px;
                    flex-direction: column-reverse;

                    .personalDetails {
                        position: relative;
                        text-align: left;
                        overflow: hidden;
                        padding: 20px;
                        width: 100%;
                        height: 330px;

                        .instagramUrl {
                            font-size: 16px;
                            line-height: 28px;
                        }

                        .bigTitle {
                            font-size: 16px;
                            line-height: 28px;
                        }

                        .toyInfo {
                            font-size: 16px;
                            line-height: 28px;
                        }
                    }
                }
            }
        }
    }
}

// tablet device
@media (min-width: 768px) {
    .personalList {
        .personalTitle {
            font-size: 60px;
            padding: 50px 50px 40px 50px;
            display: flex;
            justify-content: center;
            align-items: center;

            span {
                margin-left: 10px;
            }
        }

        .cards {
            .personalDiv {
                #container {
                    background: white;
                    border-radius: 5px;
                    overflow: hidden;
                    height: 340px;
                    width: 300px;
                    display: flex;
                    margin-right: 20px;
                    flex-direction: column-reverse;

                    img {
                        width: 100%;
                        height: 100%;
                    }

                    .personalDetails {
                        position: relative;
                        text-align: left;
                        overflow: hidden;
                        padding: 20px;
                        width: 100%;
                        height: 330px;

                        .instagramUrl {
                            display: flex;
                            text-decoration: none;
                        }

                        .bigTitle {
                            font-size: 20px;
                            line-height: 32px;
                        }

                        .toyInfo {
                            margin-bottom: 10px;
                            font-size: 16px;
                            line-height: 28px;
                        }
                    }
                }
            }
        }
    }
}

// laptop device
@media (min-width: 1024px) {
    .personalList {
        margin-top: auto;
        background-color: white;
        height: 100vh;
        scroll-snap-align: start;
        color: black;
        padding: 24 0px 10px 24px;
        display: flex;
        flex-direction: column;
        align-items: center;

        .personalTitle {
            font-size: 60px;
            padding: 30px 50px 30px 50px;
            display: flex;
            align-items: flex-end;

            span {
                margin-left: 20px;
            }
        }

        .cards {
            display: flex;
            justify-content: center;
            width: 100%;
            float: none;
            height: 90%;
            margin: 0 0.25%;
            display: flex;
            zoom: 1;
            overflow-y: hidden;

            .personalDiv {
                img {
                    height: 250px;
                    width: 300px;
                    border-radius: 5px;
                }

                #container {
                    margin-top: 0;
                    background: white;
                    border-radius: 5px;
                    overflow: hidden;
                    height: 250px;
                    width: 300px;
                    display: flex;
                    margin-right: 20px;
                    flex-direction: column-reverse;

                    .personalDetails {
                        position: relative;
                        text-align: left;
                        overflow: hidden;
                        padding: 20px;
                        width: 100%;
                        height: 330px;

                        .instagramUrl {
                            display: flex;
                            text-decoration: none;
                        }

                        .bigTitle {
                            font-size: 20px;
                        }

                        .toyInfo {
                            margin-bottom: 10px;
                            font-size: 16px;
                            line-height: 28px;
                        }
                    }
                }
            }
        }
    }
}

